--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,6 +16,12 @@
 <body>
   <div class="wrapper">
 
+     <% if log_in?%>    #we want this to show on every page. 
+      # link to sign up 
+     <%else%>
+      # link to log-out
+     <%end%>
+
       <%= yield %>
 
     <footer class="branding">
