--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,8 +1,11 @@
 
- 
- <div> Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a> to continue.</div>
-   
-    <p>Welcome to the Recepit app! If you are seeing this page, then everything is working
+    <p>Welcome to the Recepit app! If you are seeing this page, <br>
+    then everything is working
       as expected.</p>
+
+<br>
+ <div> Please <a href="/sign_up">Sign Up</a> or <a href="/login">Log In</a> to continue.</div>
+   
+   
 
 
