created signup page :)

--- a/app/views/owner/new.erb
+++ b/app/views/owner/new.erb
@@ -1,12 +1,11 @@
 <h1>Insert the form to create a new instance of your model.</h1>
- <P> create a new owner??</P>   
-  <h1>Sign Up Below:</h1>
+  <h4>Sign Up  As a Owner Below:</h4>
 
- <form action="/owner_rs" method="post">
+ <form action="/owners" method="post">
 
-     <h3>User_name <input type="text" name="name"></h3>
-     <h3>User_email <input type="text" name="email"></h3>
-     <h3>User_password <input type="text" name="password"></h3>
+     <h3>Owner name <input type="text" name="name"></h3>
+     <h3>Owner email <input type="text" name="email"></h3>
+     <h3>Owner password <input type="text" name="password"></h3>
 
      <button type="submit">Sign Up</button>
 
