log_in completed

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,7 +16,7 @@
 <body>
   <div class="wrapper">
 
-     <% if log_in?%>    #we want this to show on every page. 
+     <% if logged_in?%>    #we want this to show on every page. 
       # link to sign up 
      <%else%>
       # link to log-out
