--- a/app/views/owner/new.erb
+++ b/app/views/owner/new.erb
@@ -1,7 +1,7 @@
 <h1>Insert the form to create a new instance of your model.</h1>
   <h4>Sign Up  As a Owner Below:</h4>
 
- <form action="/owners" method="post">
+ <form action="/owner" method="post">
 
      <h3>Owner name <input type="text" name="name"></h3>
      <h3>Owner email <input type="text" name="email"></h3>
