pay_receipts controller is refactored.

--- a/app/views/pay_receipts/index.erb
+++ b/app/views/pay_receipts/index.erb
@@ -9,7 +9,7 @@
      <h2>Welcome, User: <%= current_user.name %></h2>
       <!-- # we use our current_user method here. -->
       <!-- notes:  iterate to show all tweets -->
-      <%@pay_receipt.each do |pay_receipt| %>
+      <%@pay_receipts.each do |pay_receipt| %>
         <h3> Pay_receipt:  <%=pay_receipt.content%></h3>
       <%end%>
   <%else%>
