--- a/app/views/pay_receipts/new.erb
+++ b/app/views/pay_receipts/new.erb
@@ -1,2 +1,14 @@
-<h1>Insert the form to create a new instance of your model.</h1>
+<h1>Insert the form to create a new instance of your Pay_Reciepts-model.</h1>
 <p> Read up on this (what goes on here.)</p>
+
+
+<form action="/pay_receipts" method="post">
+      <h3>Create a New Pay_Reciepts</h3>
+
+
+      <h3>New_Receipt Shop name: <input type="text" name="content" id="content"></h3>
+<br>
+      <input type="submit" value="submit">
+
+  <!-- This page is set -->
+</form>
