--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,5 +1,5 @@
 
-    <p>Welcome to the Recepit app! If you are seeing this page, <br>
+    <p>Welcome to the Receipt app! If you are seeing this page, <br>
     then everything is working
       as expected.</p>
 
