--- a/app/views/pay_receipts/edit.erb
+++ b/app/views/pay_receipts/edit.erb
@@ -1,4 +1,4 @@
-<h1>Insert the form to edit an instance of your model here.</h1>
+# <h1>Insert the form to edit an instance of your model here.</h1>
 
  User: <%= current_user.name %>
 #  having an issure with the id
