--- a/app/views/pay_receipts/show.erb
+++ b/app/views/pay_receipts/show.erb
@@ -11,3 +11,10 @@
       <input type="submit" value="Delete Pay_receipts">
 
    </form>
+<br>
+<br>
+    
+    # if user is authentics
+    <a href= "/pay_receipts"> Click to see all pay_receipts</a>
+
+     #end
