--- a/app/views/pay_receipts/show.erb
+++ b/app/views/pay_receipts/show.erb
@@ -14,7 +14,6 @@
 <br>
 <br>
     
-    # if user is authentics
+    <%if logged_in?%>
     <a href= "/pay_receipts"> Click to see all pay_receipts</a>
-
-     #end
+     <%end%>
